<resources>
    <string name="app_name">Elixir</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="choose_from_gallery">Choose from gallery</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="plus">Plus</string>

    <string name="temp_images_dir">temp_images</string>
    <string name="temp_image">temp_image.jpg</string>
    <string name="add">add</string>
    <string name="antialiasing">Antialiasing</string>
    <string name="color">color</string>
    <string name="menu">menu</string>
    <string name="scale">Scale</string>
    <string name="rotate">Rotate</string>
    <string name="filter">Filter</string>
    <string name="retouch">Retouch</string>
    <string name="spline">Spline</string>
    <string name="at">AT</string>
    <string name="um">UM</string>
    <string name="cube">Cube</string>
    <string name="_90">90</string>
    <string name="crop">crop</string>
    <string name="apply">Apply</string>
    <string name="_0">Threshold: 0</string>
    <string name="_1_0">Gain: 1.0</string>
    <string name="_10">Blur radius: 10</string>
    <string name="__10">Brush size: 10</string>
    <string name="_0_5">Retouch coefficient: 0.5</string>
    <string name="__0">0</string>
    <string name="x">x</string>
    <!--    <string name="authorities">com.hits.graphic-editor</string>-->
</resources>