<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/scalingButton"
        android:layout_width="87dp"
        android:layout_height="39dp"
        android:layout_marginStart="92dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/round_button"
        android:password="false"
        android:text="@string/scale"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toStartOf="@+id/antialiasing"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.chip.Chip
        android:id="@+id/antialiasing"
        style="@style/Widget.MaterialComponents.Chip.Choice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="16dp"
        android:text="@string/antialiasing"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="30dp">

        <TextView
            android:id="@+id/oldWidth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/__0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.039"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="625dp" />

        <TextView
            android:id="@+id/X"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/x" />

        <TextView
            android:id="@+id/oldHeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/__0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.073"
            app:layout_constraintStart_toEndOf="@+id/oldWidth"
            tools:layout_editor_absoluteY="625dp" />

        <EditText
            android:id="@+id/scalingCoefficient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:maxLength="7"
            android:minEms="4"
            android:text="@string/__0"
            app:layout_constraintEnd_toStartOf="@+id/newWidth"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="611dp" />

        <EditText
            android:id="@+id/newWidth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:maxLength="7"
            android:minEms="4"
            android:text="@string/__0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.643"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="611dp" />

        <EditText
            android:id="@+id/newHeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="0"
            android:inputType="numberDecimal"
            android:maxLength="7"
            android:minEms="4"
            android:text="@string/__0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/newWidth"
            tools:layout_editor_absoluteY="611dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>